# openmix

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: formulabench-spec.md
examples/: demo_agent.py  demo_discover.py  run_baselines.py  run_drug_excipient_baselines.py  run_mixture_baselines.py  vitamin_c_serum.yaml
experiments/: mrna_lipid_nanoparticle.yaml  multivitamin_gummy.yaml  shampoo_with_model.yaml  vitamin_c_stability.yaml
src/openmix/: __init__.py  agent.py  analysis.py  constraints.py  discover.py  experiment.py  llm.py  matching.py  mcp_server.py  molecular.py  observe.py  schema.py  score.py  validate.py
src/openmix/benchmarks/: __init__.py  drug_excipient.py  features.py  mixture_solubility.py  pharma_solubility.py  shampoo.py
src/openmix/cli/: main.py
src/openmix/knowledge/: constants.py  loader.py  pka.py
src/openmix/knowledge/data/: aliases.yaml  incompatible_pairs.yaml  oil_hlb.yaml  pka_data.yaml
src/openmix/resolver/: __init__.py  cache.py  pubchem.py  resolve.py  seed_ingredients.json
src/openmix/scorers/: __init__.py  base.py  lab.py  model.py  molecular.py  shampoo_adapter.py
tests/: test_benchmarks.py  test_constraints.py  test_experiment.py  test_llm.py  test_observe.py  test_resolver.py  test_score.py  test_validate.py
